<resources>
    <string name="app_name">爱记事</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="welcome">爱记事</string>
    <string name="describe">总有你觉得好用的记事方式</string>
    <string name="or_connect_via">第三方登录</string>
    <string name="username">手机号</string>
    <string name="forget_password">忘记密码?</string>
    <string name="title">记什么事呢？</string>
    <string name="note_content">输入记事内容…</string>
    <string name="paint">画笔</string>
    <string name="eraser">橡皮</string>
    <string name="share">分享</string>
    <string name="input_mob_number">请输入手机号</string>
    <string name="send_code">获取验证码</string>
    <string name="code">验证码</string>
    <string name="password">密码</string>
    <string name="regain">%1$d秒后重新获取</string>
    <string name="picture_hint">点击下方按钮拍照或从本地选择图片</string>
    <string name="btn_confirm">存为草稿</string>
    <string name="btn_cancel">放弃编辑</string>
    <string name="search_result_non">暂无记事，右滑选择创建新的记事吧</string>
    <string name="note_kind">记事类型</string>
    <string name="recording_note">录音记事</string>
    <string name="save">保存</string>
    <string name="video_record">摄像记事</string>
    <string name="hint_video_title">给视频起个名字吧</string>
    <string name="add_video">点我添加视频</string>
    <string name="photo_affix">拼图记事</string>
    <string name="change_template">更改模板</string>
    <string name="choose_border">选择边框</string>
    <string name="template_affix">模板</string>
    <string name="free_affix">自由</string>
    <string name="alpha">透明度</string>
    <string name="stroke">粗细</string>
    <string name="eraser_size">橡皮擦大小</string>
    <string name="notepad">记事本</string>
    <string name="just_funny">暂不支持创建呢</string>
    <string name="tip_password">设置初始密码</string>
    <string name="delete">删除</string>
    <string name="n_0">0</string>
    <string name="n_1">1</string>
    <string name="n_2">2</string>
    <string name="n_3">3</string>
    <string name="n_4">4</string>
    <string name="n_5">5</string>
    <string name="n_6">6</string>
    <string name="n_7">7</string>
    <string name="n_8">8</string>
    <string name="n_9">9</string>
    <string name="rotate">旋转</string>
    <string name="change">替换</string>
    <string name="edit">编辑</string>
    <string name="font">文字</string>
    <string name="sticker">贴纸</string>
    <string name="content">记事内容</string>
    <string name="filter">滤镜</string>
    <string name="origin_photo">原图</string>
    <string name="gray_photo">黑白</string>
    <string name="cartoon_photo">卡通</string>
    <string name="nostalgia_photo">怀旧</string>
    <string name="sketch_photo">素描</string>
    <string name="click_input_text">点击输入文字</string>
    <string name="complete">完成</string>
    <string name="font_style">字体</string>
    <string name="default_font">默认字体</string>
    <string name="history_puzzle">历史拼图记录</string>
    <string name="guide_tip_1">记事管理，有条不紊</string>
    <string name="guide_tip_2">多样记事，选你所爱</string>
    <string name="join_now">即刻加入</string>
    <string name="all_affair">事件</string>
    <string name="add_affair_tip">好冷，别让这里空着…\n点击下方按钮开始创建你的第一个事件吧</string>
    <string name="add_affair">添加事件</string>
    <string name="input_affair_title">请输入事件标题</string>
    <string name="cancel">取消</string>
    <string name="input_backup_tip">请输入备注…</string>
    <string name="remind_punctuality">整点提醒</string>
    <string name="not_remind">不提醒</string>
    <string name="detail">详情</string>
    <string name="today">今天</string>
    <string name="tourist">游客</string>
    <string name="setting">设置</string>
    <string name="version">版本号：0.12138-beta</string>
    <string name="check_update">检查更新</string>
    <string name="update_avatar">更换头像</string>
    <string name="divider">/</string>
</resources>
