<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/iv_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_origin_photo"
        style="@style/DiyImageText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/ic_filter_origin_sample"
        android:drawablePadding="2dp"
        android:text="@string/origin_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_cartoon_photo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_gray_photo"
        style="@style/DiyImageText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/ic_filter_gray_sample"
        android:drawablePadding="2dp"
        android:text="@string/gray_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_sketch_photo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_nostalgia_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cartoon_photo"
        style="@style/DiyImageText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/ic_filter_cartoon_sample"
        android:drawablePadding="2dp"
        android:text="@string/cartoon_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_nostalgia_photo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_origin_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nostalgia_photo"
        style="@style/DiyImageText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/ic_filter_nostalgia_sample"
        android:drawablePadding="2dp"
        android:text="@string/nostalgia_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_gray_photo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_cartoon_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sketch_photo"
        style="@style/DiyImageText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/ic_filter_sketch_sample"
        android:drawablePadding="2dp"
        android:text="@string/sketch_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_gray_photo"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
