<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CommonNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorItem">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_arrow_back_white_36dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#FFFAFA"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/iv_save_note" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/note_content"
        android:inputType="textMultiLine"
        android:padding="8dp"
        tools:ignore="Autofill" />

</LinearLayout>
