<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="32dp"
    android:background="@drawable/bg_edit_dialog">

    <EditText
        android:id="@+id/et_backup"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/input_backup_tip"
        android:padding="8dp"
        tools:ignore="Autofill,TextFields" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/et_backup"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="#252A34" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/view"
        android:layout_gravity="bottom"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorSpecialBlack"
            android:textSize="15sp" />

        <View
            android:id="@+id/view_divider_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:background="#252A34" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/complete"
            android:textColor="#252A34"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
