<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PictureNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorItem">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:src="@drawable/ic_arrow_back_white_36dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#FFFAFA"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/iv_save_note" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/note_content"
        android:inputType="textMultiLine"
        android:padding="8dp"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_picture_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/picture_hint"
        android:textSize="12sp" />

    <GridView
        android:id="@+id/grid_view_picture"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="2.4"
        android:gravity="center"
        android:horizontalSpacing="6dp"
        android:numColumns="3"
        android:scrollbars="none"
        android:verticalSpacing="6dp" />

    <LinearLayout
        android:id="@+id/ll_bottom_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBottomTool"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/iv_camera" />

        <ImageView
            android:id="@+id/iv_album"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/iv_album" />

    </LinearLayout>

</LinearLayout>
