<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context=".activity.SignInActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <ImageView
        android:id="@+id/iv_login_face"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.6"
        android:contentDescription="@string/app_name"
        android:transitionName="share_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iv_login_face" />

    <View
        android:id="@+id/view_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_gradient_face"
        android:transitionName="share_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_face"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="4dp"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_pass"
        app:layout_constraintStart_toStartOf="@+id/view_sign_in" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_edit_text"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="#FFFAFA"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_code"
        app:layout_constraintEnd_toEndOf="@+id/view_sign_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view_sign_in"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/et_mob_code"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bg_edit_text"
        android:digits="0123456789"
        android:hint="@string/code"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="#FFFAFA"
        android:textColorHint="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/btn_send_code"
        app:layout_constraintStart_toStartOf="@+id/view_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tv_input_mob_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/input_mob_number"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:transitionName="share_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <EditText
        android:id="@+id/et_mob_num"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_edit_text"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="#FFFAFA"
        app:layout_constraintBottom_toTopOf="@+id/tv_pass"
        app:layout_constraintEnd_toEndOf="@+id/view_sign_in"
        app:layout_constraintStart_toStartOf="@+id/view_sign_in"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tv_mob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="4dp"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_mob_num"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/bg_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#437EAC"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <ImageView
        android:id="@+id/iv_closes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_highlight_off_white_36dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_input_mob_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_sign_in" />

    <Button
        android:id="@+id/btn_send_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:background="@drawable/bg_button"
        android:text="@string/send_code"
        android:textColor="#437EAC"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_mob_code"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="4dp"
        android:text="@string/code"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/et_mob_code"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
